Updated swagger definition
